--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,6 @@
                         <version>${kotlin.version}</version>
                     </dependency>
                 </dependencies>
-
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -154,7 +153,6 @@
                             <goal>compile</goal>
                         </goals>
                     </execution>
-
                     <execution>
                         <id>test-compile</id>
                         <goals>
@@ -163,11 +161,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-<!--            <plugin>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--            </plugin>-->
         </plugins>
     </build>
 
@@ -184,4 +177,12 @@
             <url>https://jitpack.io</url>
         </repository>
     </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>food-tracker</name>
+            <url>https://maven.pkg.github.com/sudzhaev/food-tracker</url>
+        </repository>
+    </distributionManagement>
 </project>
