--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,17 @@
 
     <groupId>com.sudzhaev</groupId>
     <artifactId>food-tracker</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.0</version>
 
     <properties>
+        <dockerfile-maven-version>1.4.13</dockerfile-maven-version>
         <kotlin.version>1.4.10</kotlin.version>
         <kotlin-telegram-bot.version>5.0.0</kotlin-telegram-bot.version>
-        <spring.version>5.2.9.RELEASE</spring.version>
         <krowmapper.version>0.18</krowmapper.version>
-        <slf4j.version>1.7.30</slf4j.version>
-        <h2.version>1.4.200</h2.version>
+        <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
         <postgresql.version>42.2.18</postgresql.version>
-        <dockerfile-maven-version>1.4.13</dockerfile-maven-version>
+        <slf4j.version>1.7.30</slf4j.version>
+        <spring.version>5.2.9.RELEASE</spring.version>
     </properties>
 
     <dependencies>
@@ -76,7 +76,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>${maven-assembly-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>make-assembly</id>
