--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
         <kotlin-telegram-bot.version>5.0.0</kotlin-telegram-bot.version>
         <krowmapper.version>0.18</krowmapper.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
+        <log4j.version>2.14.0</log4j.version>
         <postgresql.version>42.2.18</postgresql.version>
-        <slf4j.version>1.7.30</slf4j.version>
         <spring.version>5.2.9.RELEASE</spring.version>
     </properties>
 
@@ -57,14 +57,19 @@
 
         <!--Logging-->
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>${slf4j.version}</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
     </dependencies>
 
@@ -166,11 +171,12 @@
 
     <repositories>
         <repository>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2</url>
+        </repository>
+        <repository>
             <id>io.spring.repo.maven.release</id>
             <url>http://repo.spring.io/release/</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
         </repository>
         <repository>
             <id>jitpack.io</id>
